<resources>
    <string name="app_name">Assignment1</string>
    <string name="phonenum">전화번호를 입력하세요</string>
    <string name="address">주소를 입력하세요</string>
    <string name="agree">개인정보 사용에 동의하십니까?</string>
    <string name="accept">동의함</string>
    <string name="decline">동의하지 않음</string>
    <string name="signin">회원가입</string>
    <string name="name">이름을 입력하세요</string>
    <string name="passwordinput">Password를 입력하세요</string>
    <string name="idinput">ID를 입력하세요</string>
</resources>