<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@color/background">

            <EditText
                android:id="@+id/ID"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:hint="@string/idinput"
                android:inputType="text"
                android:textColor="@color/black"
                android:background="@color/input_background"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:hint="@string/passwordinput"
                android:inputType="textWebPassword"
                android:textColor="@color/black"
                android:background="@color/input_background"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:privateImeOptions="defaultInputmode=korean"
                android:textColor="@color/black"
                android:background="@color/input_background"/>

            <EditText
                android:id="@+id/phonenum"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:hint="@string/phonenum"
                android:inputType="phone"
                android:textColor="@color/black"
                android:background="@color/input_background"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:inputType="text"
                android:privateImeOptions="defaultInputmode=korean"
                android:textColor="@color/black"
                android:background="@color/input_background"/>

            <TextView
                android:id="@+id/serviceterm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/agree"
                android:gravity="center_horizontal" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/accept"
                    />

                <RadioButton
                    android:id="@+id/decline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decline"/>

            </RadioGroup>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="100dp"
                android:text="@string/signin"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>